# infomax_api

./: AUTOMATED_REPAIR_SYSTEM_GUIDE.md  END_TO_END_TEST_GUIDE.md  FILE_RENAMING_SYSTEM_GUIDE.md  Git_덮어씌우기.bat  INFOMAX_BOND_API_20231026_000001.xlsx  INFOMAX_BOND_API_20231026_000002.xlsx  MIGRATION_README.md  Mac_워치햄스터_실행_가이드_v4.md  ModuleRegistry_Integration_Summary.md  POSCO_Naming_Convention_Migration_Guide.md  POSCO_Naming_Rollback_Guide.md  POSCO_Naming_Troubleshooting_Guide.md  POSCO_News_250808_Direct_Start.bat  POSCO_News_250808_Direct_Start.sh  POSCO_News_250808_Start.bat  POSCO_News_250808_Start.sh  POSCO_News_250808_Stop.bat  POSCO_WatchHamster_v3_Complete_Guide.md  POSCO_WatchHamster_v3_Final_Summary.md  POSCO_control_center_실행.bat  POSCO_test_실행.bat  POSCO_watchhamster_v3_control_center.bat  POSCO_watchhamster_v3_control_center.command  POSCO_메인_system.bat  POSCO_시스템_사용자_매뉴얼_v2.0.md  POSCO_시스템_종합_트러블슈팅_가이드_v2.0.md  POSCO_시작.bat  POSCO_워치햄스터_웹훅_복원_작업_종합_보고서.md  Posco_News_mini  PowerShell_진단.bat  README.md  README_워치햄스터_사용법.md  TEST_FRAMEWORK_README.md  Task5_V2_Notification_Enhancement_Summary.md  Task6_Control_Center_Implementation_Summary.md  Task9_Performance_Monitoring_Implementation_Summary.md  WatchHamster_v3.0_Control_Panel.command  WatchHamster_v3.0_Final_Summary.md  advanced_file_optimizer.py  advanced_optimization_report.md  (+269 more)
.aggressive_syntax_repair_backup/: config_data_standardizer.py.backup_20250809_193318  documentation_standardizer.py.backup_20250809_193318  file_renaming_system.py.backup_20250809_193318  filename_standardizer.py.backup_20250809_193318  final_integration_test_system.py.backup_20250809_193318  folder_structure_reorganizer.py.backup_20250809_193318  naming_standardization_verification_system.py.backup_20250809_193318  python_naming_standardizer.py.backup_20250809_193318  shell_batch_script_standardizer.py.backup_20250809_193318  (+2 more)
Monitoring/WatchHamster_Project_GUI_Tauri/src-tauri/: Cargo.toml
Monitoring/WatchHamster_Project_GUI_Tauri/src-tauri/.cargo/: config.toml
Monitoring/WatchHamster_Project_GUI_Tauri/src-tauri/src/python_bridge/: tests.rs
Monitoring/WatchHamster_Project_GUI_Tauri/src-tauri/src/system_tray/: tests.rs
Monitoring/WatchHamster_Project_GUI_Tauri/src-tauri/src/window_manager/: tests.rs
(+2085 files in other folders)
